--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
   <header>
-    
+    <div class="header-wrapper">
+  
   <nav>
     <ul>
   <li>
@@ -28,6 +29,10 @@
     </ul>
   </nav>
 
+  <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+    <i class="fas fa-moon" id="theme-icon"></i>
+  </button>
+</div>
 
 
 
